testsuite/tests/properties/invalid_lambda_arg_type/all_index.lkt
import common

class ExampleBlock: BaseExampleBlock {
    @exported fun p(): Array[IndexedItem] =
        node.items.iall((e: Example, i: Bool) => e.is_null or i == 0)
}
